Fix alignment

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 
   & h1 {
     font-size: 4rem;
@@ -53,8 +54,8 @@
 .avatar {
   margin-bottom: 3rem;
   & > span {
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     border-radius: 50%;
   }
 }
